--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
-td{
-    border: 2px solid black
+p{
+    background-color: aquamarine;
+}
+
+a{
+    background-color: rgb(212, 171, 137)
+}
+div{
+    background-color: yellow;
+}
+span{
+    background-color: rgb(207, 176, 235);
 }
