--- a/style.css
+++ b/style.css
@@ -1,11 +1,3 @@
-.red{
-    color: red;
-}
-
-.bg-yellow{
-    background-color: yellow;
-}
-
-#firstdiv{
-    /*background-color: red;
+controls{
+    background-color: rgb(223, 157, 223);
 }
